--- a/NETFLIX_MOVIES_AND_TV_SHOWS_CLUSTERING_By_Kushal.ipynb
+++ b/NETFLIX_MOVIES_AND_TV_SHOWS_CLUSTERING_By_Kushal.ipynb
@@ -1168,7 +1168,7 @@
         "\n",
         "* **duration**: Total Duration - in minutes or number of seasons\n",
         "\n",
-        "* **listed_in** : Genere\n",
+        "* **listed_in** : Genre\n",
         "\n",
         "* **description**: The Summary description"
       ]
@@ -3483,7 +3483,7 @@
         "Here we will test that is there any relation between the year(year_added) of that content added with the type of the content(type).\n",
         "\n",
         "\n",
-        "* **Null Hypothesis:** year_added has no impact on type of content that getss added to the platform.\n",
+        "* **Null Hypothesis:** year_added has no impact on type of content that gets added to the platform.\n",
         "\n",
         "* **Alternative Hypothesis**: year_added has impact on type of content that gets added to the platform."
       ],
@@ -5607,7 +5607,7 @@
         "**5. TV-MA tops the charts, indicating that mature content is more popular on Netflix.**\n",
         "\n",
         "\n",
-        "**6.By applying different clustering models like Kmeans, Agglomerative clustering on dataset we got the best cluster arrangements i.e optimal number of cluster is equal to 3 .**\n",
+        "**6.By applying different clustering models like Kmeans, Agglomerative clustering on dataset we got the best cluster arrangements i.e optimal number of cluster is equal to 2 .**\n",
         "\n",
         "**7. A content based recommender system was built using the similarity matrix obtained after using cosine similarity. This recommender system will make 10 recommendations to the user based on the type of show they watched or searched.**"
       ]
